# ElectronBotCli

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/tools/: ele_test  ele_test.c  minimal_test.c  test_bot.py
docs/: rk3566_vision_solution.md
src/: app.rs  event_handler.rs  main.rs  ui_components.rs
src/app/: comm.rs  config.rs  constants.rs  display.rs  eyes.rs  log.rs  menu.rs  mod.rs  servo.rs
src/device/: cdc.rs  image.rs  mod.rs  types.rs
src/input/: device.rs  menu.rs  mod.rs  settings.rs
src/robot/: joint.rs  lcd.rs  mod.rs
src/ui/: mod.rs  sidebar.rs
src/ui/pages/: about.rs  device_control.rs  device_status.rs  mod.rs  settings.rs
src/ui_components/: log_popup.rs  mod.rs  port_select_popup.rs
src/voice/: mod.rs
