[package]
name = "ele_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
image = "0.25.9"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
electron-bot = { git = "https://github.com/TOTHTOT/ElectronBotLib.git" }
BotEyes = { git = "https://github.com/TOTHTOT/BotEyes" }
vosk = "0.3"
cpal = "0.15"